Fixed UI being too big

--- a/public/style.css
+++ b/public/style.css
@@ -75,8 +75,8 @@ a {
     outline: none;
     left: 10px;
     width: 100%;
-    height: 100px;
-    font-size: 40px;
+    height: 80px;
+    font-size: 30px;
     box-sizing:border-box;
     background-color: rgba(0, 0, 0, 0.5);
     text-align: center;
@@ -99,12 +99,12 @@ a {
     color: white;
     font-family : inherit;
     width: 100%;
-    height: 100px;
+    height: 80px;
     text-decoration: none;
     border: none;
     outline: none;
     cursor: pointer;
-    font-size: 40px;
+    font-size: 30px;
     background-color: rgba(0, 0, 0, 0);
     overflow: visible;
 }
@@ -114,7 +114,7 @@ a {
     height: 100%;
     background-color: green;
     text-align: center;
-    line-height: 100px;
+    line-height: 80px;
     overflow: visible;
     white-space: nowrap
 }
@@ -126,7 +126,7 @@ a {
 /* NAV BAR */
 
 #nav {
-    height: 80px;
+    height: 60px;
     text-align: left;
     background-color: rgba(0, 0, 0, 0.5);
     color: white;
@@ -146,7 +146,7 @@ a {
 .tabcontent {
     border-top: none;
     text-align: left;
-    height: 40vh;
+    height: 35vh;
     color: white;
     background-color: rgba(0, 0, 0, 0.5);
     padding: 40px;
@@ -154,7 +154,7 @@ a {
 
 .tablinks {
     color: white;
-    font-size: 30px;
+    font-size: 25px;
     font-family : inherit;
     background-color: rgba(0, 0, 0, 0);
     float: left;
@@ -173,6 +173,7 @@ a {
     width: 60%;
     height: 40vh;
     min-width: 600px;
+    max-width: 1000px;
     margin-left: -30%;
     left: 50vw;
 }
